--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
             "purpose": "any maskable"
         },
         {
-            "src": "https://i.ibb.co/V0Q0dN4v/maskable-icon-x512.png"",
+            "src": "https://i.ibb.co/V0Q0dN4v/maskable-icon-x512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any maskable"
